Check Accommodation Limit
Create a computed property which checks whether the property accommodation_cost
passed a certain threshold based on the movement_category value.

--- a/travelsFront/app/templates/secretary-compensation.hbs
+++ b/travelsFront/app/templates/secretary-compensation.hbs
@@ -7,12 +7,21 @@
       {{ form.messages }}
       {{ form.fields }}
       {{# form.controls }}
-        {{list-action action=(action "handleSubmit") 
-	        confirm=true value=(t 'form.button.submit') 
-	        tooltip-message=(t 'tooltip_save_b4_submit') 
-	        promptTitle=(t 'prompt_submit_title') 
-	        promptMessage=(t 'prompt_submit_message') 
-        }}
+        {{#if model.passedAccommodationLimit}}
+          {{list-action action=(action "handleSubmit")
+            confirm=true value=(t 'form.button.submit')
+            tooltip-message=(t 'tooltip_save_b4_submit')
+            promptTitle=(t 'prompt_limit_title')
+            promptMessage=(t 'prompt_limit_message')
+          }}
+        {{else}}
+          {{list-action action=(action "handleSubmit")
+            confirm=true value=(t 'form.button.submit')
+            tooltip-message=(t 'tooltip_save_b4_submit')
+            promptTitle=(t 'prompt_submit_title')
+            promptMessage=(t 'prompt_submit_message')
+          }}
+        {{/if}}
       {{/ form.controls}}
   {{/ model-form/form }}
   {{/paper-content}}
