--- a/travelsFront/app/templates/components/model-form/fields/file.hbs
+++ b/travelsFront/app/templates/components/model-form/fields/file.hbs
@@ -16,7 +16,7 @@
     icon=(if fattrs.disabled 'lock' (if shouldDelete 'delete_forever' (if fattrs.icon fattrs.icon null)))    
 }}
 
-{{#if  (and fileURL (can "see petition"))}}
+{{#if  (and fileURL (or (can "see petition") (can "managerApprove petition")))}}
 <div flex class="file" layout-gt-xs="row" layout-align="center end">
     <div class="icon">
         {{#paper-button href=fileURL raised=true primary=true}}
