Adjust templates to multiple destinations

--- a/travelsBackend/texpenses/templates/texpenses/movement_compensation_decision/content.html
+++ b/travelsBackend/texpenses/templates/texpenses/movement_compensation_decision/content.html
@@ -42,53 +42,67 @@
 	{% include 'texpenses/footer.html' %}
 </footer>
 
-<br><br><br><br><br><br><br><br><br><br><br><br>
-<table style="width:100%">
-	<tr>
-		<td>Ημερομηνία μετακίνησης</td>
-		<td>Αναχώρηση</td>
-		<td>{{depart_date|date:"d/m/Y"}}</td>
-		<td>Επιστροφή</td>
-		<td>{{return_date|date:"d/m/Y"}}</td>
-	</tr>
-	<tr>
-		<td>Ημερομηνία εργασιών</td>
-		<td>Έναρξη</td>
-		<td>{{task_start_date|date:"d/m/Y"}}</td>
-		<td>Λήξη</td>
-		<td>{{task_end_date|date:"d/m/Y"}}</td>
-	</tr>
-	<tr>
-		<td>Εναπομείνασες ημέρες μετακίνησης εργασιών</td>
-		<td>Πριν</td>
-		<td>{{trip_days_before}}</td>
-		<td>Μετά</td>
-		<td>{{trip_days_after}}</td>
-	</tr>
-	<tr>
-		<td>Ημέρες μετακίνησης εργασιών</td>
-		<td>{{transport_days}}</td>
-	</tr>
-	<tr>
-		<td>Διανυκτερεύσεις</td>
-		<td>{{overnights_num}}</td>
-	</tr>
-	<tr>
-		<td>Τόπος μετακίνησης</td>
-		<td>Από:</td>
-		<td>{{departure_point}}</td>
-		<td>Προς:</td>
-		<td>{{arrival_point}}</td>
-	</tr>
-	<tr>
-		<td>Μέσο μετακίνησης</td>
-		<td>{{means_of_transport}}</td>
-	</tr>
-	<tr>
-		<td>Αιτιολογία μετακίνησης</td>
-		<td colspan="4">{{reason}}</td>
-	</tr>
-</table>
+	<br><br><br><br><br><br><br><br><br><br><br><br>
+	<table style="width:100%">
+		<tr>
+			<td>Ημερομηνία μετακίνησης</td>
+			<td>Αναχώρηση</td>
+			<td>{{depart_date|date:"d/m/Y"}}</td>
+			<td>Επιστροφή</td>
+			<td>{{return_date|date:"d/m/Y"}}</td>
+		</tr>
+		<tr>
+			<td>Ημερομηνία εργασιών</td>
+			<td>Έναρξη</td>
+			<td>{{task_start_date|date:"d/m/Y"}}</td>
+			<td>Λήξη</td>
+			<td>{{task_end_date|date:"d/m/Y"}}</td>
+		</tr>
+		<tr>
+			<td>Εναπομείνασες ημέρες μετακίνησης εργασιών</td>
+			<td>Πριν</td>
+			<td>{{trip_days_before}}</td>
+			<td>Μετά</td>
+			<td>{{trip_days_after}}</td>
+		</tr>
+		<tr>
+			<td>Ημέρες μετακίνησης εργασιών</td>
+			<td>{{transport_days}}</td>
+		</tr>
+		<tr>
+			<td>Διανυκτερεύσεις</td>
+			<td>{{overnights_num}}</td>
+		</tr>
+		<tr>
+			<td>Τόπος μετακίνησης</td>
+			<td>Από:</td>
+			<td>{{departure_point}}</td>
+			<td>Προς:</td>
+			<td>{{arrival_point}}</td>
+		</tr>
+		{% if travel_info.count > 1 %}
+		<tr>
+			<td>Ενδιάμεσοι προορισμοί</td>
+			{% for travel_obj in travel_info %}
+			<tr>
+				<td>Από(αναχώρηση {{travel_obj.depart_date|date:"d/m/Y"}}):</td>
+				<td>{{travel_obj.departure_point}} ({{travel_obj.get_means_of_transport_display}})</td>
+				<td>Προς:</td>
+				<td>{{travel_obj.arrival_point}}</td>
+			</tr>
+			{% endfor %}
+		</tr>
+		{% else %}
+		<tr>
+			<td>Μέσο μετακίνησης</td>
+			<td>{{means_of_transport}}</td>
+		</tr>
+		{% endif %}
+		<tr>
+			<td>Αιτιολογία μετακίνησης</td>
+			<td colspan="4">{{reason}}</td>
+		</tr>
+	</table>
 
 <table style="width:100%">
 	<caption style='text-align: center;'><b>Οι πραγματοποιηθείσες δαπάνες έχουν ως εξής:</b></caption>
