--- a/travelsBackend/texpenses/templates/texpenses/movement_petition_decision/content.html
+++ b/travelsBackend/texpenses/templates/texpenses/movement_petition_decision/content.html
@@ -116,11 +116,12 @@
 		</tr>
 		<tr>
 			<td>Διανυκτέρευση</td>
-			<td>{{overnights_num_manual}} ημέρες x {{accommodation_cost}} = {{overnights_sum_cost}} ευρώ  </td>
+			<td>{{overnights_sum_cost_string}} = {{overnights_sum_cost}} ευρώ </td>
 		</tr>
 		<tr>
 			<td>Ημερήσια Αποζημίωση</td>
-			<td>{{compensation_days_manual}} ημέρες x {{compensation_level}} = {{compensation_cost}} ευρώ </td>
+			<td>{{compensation_string}} = {{compensation_cost}} ευρώ </td>
+
 		</tr>
 		<tr>
 			<td>Κόστος συμμετοχής</td>
