Minor changes to the templates
1. Remove means of transport info
2. Depict date of departure in a better manner

--- a/travelsBackend/texpenses/templates/texpenses/movement_compensation_application/content.html
+++ b/travelsBackend/texpenses/templates/texpenses/movement_compensation_application/content.html
@@ -65,8 +65,8 @@
 		<td>Ενδιάμεσοι προορισμοί</td>
 		{% for travel_obj in travel_info %}
 		<tr>
-			<td>Από(αναχώρηση {{travel_obj.depart_date|date:"d/m/Y"}}):</td>
-			<td>{{travel_obj.departure_point}} ({{travel_obj.get_means_of_transport_display}})</td>
+			<td>Από(ημ/νια {{travel_obj.depart_date|date:"d/m/Y"}}):</td>
+			<td>{{travel_obj.departure_point}}</td>
 			<td>Προς:</td>
 			<td>{{travel_obj.arrival_point}}</td>
 		</tr>
