--- a/travelsFront/app/templates/components/travel-info.hbs
+++ b/travelsFront/app/templates/components/travel-info.hbs
@@ -1,6 +1,6 @@
 <div class="layout-column">
 {{#each travelInfos as |travelInfo index|}}
-{{#paper-button class="flex" onClick=(action 'showInfo' index) raised=(not (eq activeTravelInfo travelInfo)) accent=true}}Destination #{{travelInfo.index}}: {{ travelInfo.tabDisplay }}{{/paper-button}}
+{{#paper-button class="flex" onClick=(action 'showInfo' index) raised=(not (eq activeTravelInfo travelInfo)) accent=true}}{{t 'travel_info_number.label'}}{{travelInfo.index}}: {{ travelInfo.tabDisplay }}{{/paper-button}}
 {{#if (and activeTravelInfo (eq activeTravelInfo travelInfo))}}
   {{#model-form/form activeTravelInfo ui=uiToDisplay as |form|}}
     {{ form.messages }}
@@ -10,4 +10,4 @@
 {{/each}}
 </div>
 
-{{#paper-button onClick=(action 'add') raised=true}}ADD DESTINATION{{/paper-button}}
+{{#paper-button onClick=(action 'add') raised=true}}{{t 'form.button.add_destination'}}{{/paper-button}}
