Create button for remove destination action

--- a/travelsFront/app/templates/components/travel-info.hbs
+++ b/travelsFront/app/templates/components/travel-info.hbs
@@ -11,3 +11,4 @@
 </div>
 
 {{#paper-button onClick=(action 'add') raised=true}}{{t 'form.button.add_destination'}}{{/paper-button}}
+{{#paper-button onClick=(action 'confirmRemove' index) raised=true }}{{t 'form.button.remove_destination'}}{{/paper-button}}
