Show 1st destination in petition-list template

--- a/travelsFront/app/templates/components/petition-listing.hbs
+++ b/travelsFront/app/templates/components/petition-listing.hbs
@@ -54,7 +54,7 @@
 {{#row.cell}}{{petition.first_name}}{{/row.cell}}
 {{#row.cell}}{{petition.last_name}}{{/row.cell}}
 {{#row.cell}}{{petition.project.name}}{{/row.cell}}
-{{#row.cell}}{{petition.arrival_point.name}}{{/row.cell}}
+{{#row.cell}}{{petition.travel_info.firstObject.arrival_point.name}}{{/row.cell}}
 {{#row.cell}}{{to-date petition.created}}{{/row.cell}}
 {{#row.cell}}{{to-date petition.updated}}{{/row.cell}}
 {{#row.cell}}{{to-date petition.depart_date}}{{/row.cell}}
