--- a/travelsBackend/texpenses/templates/texpenses/base.html
+++ b/travelsBackend/texpenses/templates/texpenses/base.html
@@ -1,4 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+{% load tz %}
+
+{% timezone "Europe/Athens" %}
 <html>
 	<head>
 		<style>
@@ -32,3 +35,5 @@ p,ol {
 		</footer>
 	</body>
 </html>
+{% endtimezone %}
+
