--- a/travelsBackend/texpenses/templates/texpenses/movement_petition_decision/content.html
+++ b/travelsBackend/texpenses/templates/texpenses/movement_petition_decision/content.html
@@ -47,16 +47,16 @@
 	<tr>
 		<td>Ημερομηνία μετακίνησης</td>
 		<td>Αναχώρηση</td>
-		<td>{{depart_date|date:"d/m/Y"}}</td>
+		<td>{{depart_date|date:"d/m/Y, H:i"}}</td>
 		<td>Επιστροφή</td>
-		<td>{{return_date|date:"d/m/Y"}}</td>
+		<td>{{return_date|date:"d/m/Y, H:i"}}</td>
 	</tr>
 	<tr>
 		<td>Ημερομηνία εργασιών</td>
 		<td>Έναρξη</td>
-		<td>{{task_start_date|date:"d/m/Y"}}</td>
+		<td>{{task_start_date|date:"d/m/Y, H:i"}}</td>
 		<td>Λήξη</td>
-		<td>{{task_end_date|date:"d/m/Y"}}</td>
+		<td>{{task_end_date|date:"d/m/Y, H:i"}}</td>
 	</tr>
 	<tr>
 		<td>Εναπομείνασες ημέρες μετακίνησης εργασιών</td>
