--- a/travelsFront/app/templates/statistics.hbs
+++ b/travelsFront/app/templates/statistics.hbs
@@ -1,3 +1,3 @@
 {{ page-toolbar pageTitle=(t "statistics.title") }}
 
-{{stats-export statsExport='statisticsExport'}}
+{{stats-export statsExport='statisticsExport' statsExportPerProject='statisticsExportPerProject'}}
