Minor template changes

--- a/travelsBackend/texpenses/templates/texpenses/decision_protocol.html
+++ b/travelsBackend/texpenses/templates/texpenses/decision_protocol.html
@@ -2,7 +2,7 @@
 {% block protocol_content%}
 <h5 style="text-align: right;">
 	ΑΝΑΡΤΑΤΑΙ ΣΤΗ ΔΙΑΥΓΕΙΑ<br>
-	ΔΣΕ:&nbsp;{{dse}} Αρ.Μετ:&nbsp;{{movement_id}}<br>
+	ΔΣΕ:&nbsp;{{dse}}<br>
 	Αθήνα,&nbsp;{{movement_date_protocol|date:"d/m/Y"}}<br>
 	Αρ.&nbsp;Πρωτ.:&nbsp;{{movement_protocol}}
 </h5>
