--- a/travelsBackend/texpenses/templates/texpenses/movement_petition_decision/content.html
+++ b/travelsBackend/texpenses/templates/texpenses/movement_petition_decision/content.html
@@ -98,11 +98,11 @@
 	</tr>
 	<tr>
 		<td>Εισιτήριο</td>
-		<td>{{transportation_cost}} {{transportation_default_currency}} </td>
+		<td>{{transportation_cost}} ευρώ </td>
 	</tr>
 	<tr>
 		<td>Διανυκτέρευση</td>
-		<td>{{overnights_num_manual}} ημέρες x {{accommodation_cost}} = {{overnights_sum_cost}} {{accommodation_default_currency}}  </td>
+		<td>{{overnights_num_manual}} ημέρες x {{accommodation_cost}} = {{overnights_sum_cost}} ευρώ</td>
 	</tr>
 	<tr>
 		<td>Ημερήσια Αποζημίωση</td>
@@ -110,11 +110,11 @@
 	</tr>
 	<tr>
 		<td>Κόστος συμμετοχής</td>
-		<td>{{participation_cost}} {{participation_default_currency}}  </td>
+		<td>{{participation_cost}} ευρώ</td>
 	</tr>
 	<tr>
 		<td>Λοιπά έξοδα μετακίνησης</td>
-		<td>{{additional_expenses_initial}} {{additional_expenses_default_currency}}  </td>
+		<td>{{additional_expenses_initial}} ευρώ </td>
 	</tr>
 	<tr>
 		<td><b>Σύνολο</td>
