--- a/travelsBackend/texpenses/templates/texpenses/application_signature.html
+++ b/travelsBackend/texpenses/templates/texpenses/application_signature.html
@@ -3,7 +3,7 @@
 
 {% block signature_content %}
 <h5 style="text-align: left;">
-	Το σύνολο των δαπανών μετακίνησης καλύπτονται από τον λογαριασμό του έργου «{{project}}».
+	Το σύνολο των δαπανών μετακίνησης καλύπτεται από τον λογαριασμό του έργου «{{project}}».
 </h5>
 <table style="width:100%; text-align:center;">
 	<tr style='text-align:center;'>
