--- a/travelsBackend/texpenses/templates/texpenses/compensation_protocol.html
+++ b/travelsBackend/texpenses/templates/texpenses/compensation_protocol.html
@@ -1,7 +1,7 @@
 {% extends "texpenses/protocol.html" %}
 {% block protocol_content%}
 <h5 style="text-align: right;">
-	ΔΣΕ:&nbsp;{{dse}} Αρ.Μετ:&nbsp;{{movement_id}}<br>
+	ΔΣΕ:&nbsp;{{dse}}<br>
 	Αθήνα,&nbsp;{{compensation_petition_date|date:"d/m/Y"}}<br>
 	Αρ.&nbsp;Πρωτ.:&nbsp;{{compensation_petition_protocol}}
 </h5>
