--- a/travelsBackend/texpenses/templates/texpenses/movement_compensation_decision/content.html
+++ b/travelsBackend/texpenses/templates/texpenses/movement_compensation_decision/content.html
@@ -98,7 +98,7 @@
 	</tr>
 	<tr>
 		<td>Εισιτήριο</td>
-		<td>{{transportation_cost}} {{transportation_default_currency}} </td>
+		<td>{{transportation_cost}} ευρώ </td>
 	</tr>
 	<tr>
 		<td>Ημερήσια Αποζημίωση</td>
@@ -106,19 +106,19 @@
 	</tr>
 	<tr>
 		<td>Διανυκτέρευση</td>
-		<td>{{overnights_num_manual}} ημέρες x {{accommodation_cost}} = {{overnights_sum_cost}} {{accommodation_default_currency}}  </td>
+		<td>{{overnights_num_manual}} ημέρες x {{accommodation_cost}} = {{overnights_sum_cost}} ευρώ </td>
 	</tr>
 	<tr>
 		<td>Κόστος συμμετοχής</td>
-		<td>{{participation_cost}} {{participation_default_currency}}  </td>
+		<td>{{participation_cost}} ευρώ</td>
 	</tr>
 	<tr>
 		<td>Λοιπά έξοδα μετακίνησης</td>
-		<td>{{additional_expenses}} {{additional_expenses_default_currency}}  </td>
+		<td>{{additional_expenses}} ευρώ</td>
 	</tr>
 	<tr>
 		<td><b>Σύνολο</td>
-		<td><b>{{total_cost}} ευρώ </b></td>
+		<td><b>{{total_cost}} ευρώ</b></td>
 	</tr>
 </table>
 
@@ -135,7 +135,7 @@
 	</tr>
 	<tr>
 		<td><b>Σύνολο Αποζημίωσης</td>
-		<td><b>{{compensation_final}} ευρώ</b></td>
+		<td><b>{{compensation_final|add:additional_expenses}} ευρώ</b></td>
 	</tr>
 </table>
 {% endblock %}
