Fix minor template bug

--- a/travelsBackend/texpenses/templates/texpenses/movement_compensation_decision/content.html
+++ b/travelsBackend/texpenses/templates/texpenses/movement_compensation_decision/content.html
@@ -151,7 +151,7 @@
 		</tr>
 		<tr>
 			<td><b>Σύνολο Αποζημίωσης</td>
-			<td><b>{{compensation_final|add:additional_expenses}} ευρώ</b></td>
+			<td><b>{{compensation_final}} ευρώ</b></td>
 		</tr>
 	</table>
 	{% endblock %}
