Create depart_date range filters

--- a/travelsFront/app/templates/components/list-filter.hbs
+++ b/travelsFront/app/templates/components/list-filter.hbs
@@ -16,7 +16,8 @@
       {{/paper-option}}
     {{/each}}
 	{{/paper-select}}	
-	{{pick-a-date date=filters.depart_date__gte on-selected=(action (mut filters.depart_date__gte)) placeholder=(t 'placeholder.filterByStartDate')}}
+	{{pick-a-date date=filters.depart_date__gte on-selected=(action (mut filters.depart_date__gte)) placeholder=(t 'placeholder.filterByStartDateFrom')}}
+	{{pick-a-date date=filters.depart_date__lte on-selected=(action (mut filters.depart_date__lte)) placeholder=(t 'placeholder.filterByStartDateTo')}}
 	{{pick-a-date date=filters.return_date__lte on-selected=(action (mut filters.return_date__lte)) placeholder=(t 'placeholder.filterByEndDate')}}
 {{/paper-card-content}}
 	<div class="md-actions" layout="row" style="margin-left:1%;">
