Add transporation_cost_to_be_compensated to final compensation formula

--- a/travelsBackend/texpenses/templates/texpenses/movement_compensation_decision/content.html
+++ b/travelsBackend/texpenses/templates/texpenses/movement_compensation_decision/content.html
@@ -146,6 +146,10 @@
 			<td>{{compensation_string}} = {{compensation_cost}} ευρώ </td>
 		</tr>
 		<tr>
+			<td>Έξοδα μετακίνησης προς αποζημίωση</td>
+			<td>{{transportation_compensation}} ευρώ</td>
+		</tr>
+		<tr>
 			<td>Λοιπά έξοδα μετακίνησης</td>
 			<td>{{additional_expenses}} ευρώ</td>
 		</tr>
