--- a/travelsFront/app/templates/components/petition-listing.hbs
+++ b/travelsFront/app/templates/components/petition-listing.hbs
@@ -8,6 +8,8 @@
     {{list-action action=(action "pdf" petition "1") icon='file_download' tooltip-message=(t 'pdf_travel_application') iconButton=true confirm=false}}
     {{list-action action=(action "pdf" petition "2") icon='file_download' tooltip-message=(t 'pdf_travel_decision') iconButton=true confirm=false}}
     {{list-action action=(action "approve" petition) icon='done' tooltip-message=(t 'travel_presidentApproval') iconButton=true confirm=true promptTitle=(t 'prompt_done_title') promptMessage=(t 'prompt_done_message')}}
+  {{else if (eq petition.status 5)}}
+    {{list-action action=(action "undo" petition) icon='undo' tooltip-message=(t 'tooltip_undo') iconButton=true confirm=true promptTitle=(t 'prompt_undo_title') promptMessage=(t 'prompt_undo_message')}}
   {{/if}}
 {{else if (can "managerApprove petition")}}
   {{#if (and (lte petition.status 3) (eq petition.needsApproval false))}}
@@ -37,6 +39,8 @@
     {{list-action action=(action "pdf" petition "3") icon='file_download' tooltip-message=(t 'pdf_compensation_application') iconButton=true confirm=false}}
     {{list-action action=(action "pdf" petition "4") icon='file_download' tooltip-message=(t 'pdf_compensation_decision') iconButton=true confirm=false}}
     {{list-action action=(action "approve" petition) icon='done' tooltip-message=(t 'compensation_presidentApproval') iconButton=true confirm=true promptTitle=(t 'prompt_done_title') promptMessage=(t 'prompt_done_message')}}
+  {{else if (eq petition.status 10)}}
+    {{list-action action=(action "undo" petition) icon='undo' tooltip-message=(t 'tooltip_undo') iconButton=true confirm=true promptTitle=(t 'prompt_undo_title') promptMessage=(t 'prompt_undo_message')}}
   {{/if}}
 {{else if (can "see petition")}}
   {{#if (eq petition.status 1)}}
