Take last backend code with new endpoint application

--- a/travelsBackend/texpenses/templates/texpenses/decision_signature.html
+++ b/travelsBackend/texpenses/templates/texpenses/decision_signature.html
@@ -3,10 +3,10 @@
 
 {% block signature_content %}
 <h5 style="text-align: left;">
-	Το σύνολο των δαπανών μετακίνησης καλύπτονται από τον λογαριασμό του έργου «{{project}}».
+	Το σύνολο των δαπανών μετακίνησης καλύπτεται από τον λογαριασμό του έργου «{{project}}».
 </h5>
 <h5 style="text-align: right;">
 	Ο ΠΡΟΕΔΡΟΣ ΚΑΙ ΔΙΕΥΘΥΝΩΝ<br>
-       	ΣΥΜΒΟΥΛΟΣ ΤΗΣ ΕΔΕΤ ΑΕ.
+       	ΣΥΜΒΟΥΛΟΣ ΤΗΣ ΕΔΕΤ ΑΕ
 </h5>
 {% endblock %}
