--- a/travelsBackend/texpenses/templates/texpenses/compensation_protocol.html
+++ b/travelsBackend/texpenses/templates/texpenses/compensation_protocol.html
@@ -1,9 +1,9 @@
 {% extends "texpenses/protocol.html" %}
 {% block protocol_content%}
 <h5 style="text-align: right;">
-	ΔΣΕ:{{dse}} Αρ.Μετ:{{movement_id}}<br>
-	Αθήνα,{{compensation_petition_date|date:"d/m/Y"}}<br>
-	Αρ.Πρωτ.:{{compensation_petition_protocol}}
+	ΔΣΕ:&nbsp;{{dse}}<br>
+	Αθήνα,&nbsp;{{compensation_petition_date|date:"d/m/Y"}}<br>
+	Αρ.&nbsp;Πρωτ.:&nbsp;{{compensation_petition_protocol}}
 </h5>
 
 {% endblock %}
