--- a/travelsBackend/texpenses/templates/texpenses/footer.html
+++ b/travelsBackend/texpenses/templates/texpenses/footer.html
@@ -1,25 +1,16 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <table style="margin: 0px auto;">
 	<tr>
-		<td>
-			<font style='font-size:50%'>
-				Λ. ΚΗΦΙΣΙΑΣ 7 • AΘHNA • T.K.11523 • THΛ: 210 74.74.274• FAX: 210.74.74.490<br>
-				7, KIFISIAS AV.• 11523, ATHENS • GREECE • TEL: +30.210.74.74.274 • FAX: +30.210.74.74.490
-			</font>
-	<hr>
-	<font style='font-size:50%'>
-		e-mail: info@grnet.gr- <a href='http://www.grnet.gr'>www.grnet.gr</a>
-	</font>
+		<td style='font-size:50%;text-align:center;'>
+			Λ. ΚΗΦΙΣΙΑΣ 7 • AΘHNA • T.K.11523 • THΛ: 210 74.74.274• FAX: 210.74.74.490<br>
+			7, KIFISIAS AV.• 11523, ATHENS • GREECE • TEL: +30.210.74.74.274 • FAX: +30.210.74.74.490
+		<hr>
+			e-mail: info@grnet.gr- <a href='http://www.grnet.gr'>www.grnet.gr</a>
 		</td>
-
 		<td rowspan='2'>
 			{% load static %}
-			<img src="{% static 'images/footer_image.png' %}" style="width: 62px; height:62px;" alt="My image"/>
+			<img src="{% static 'images/iso_footer.jpg' %}" style="width: 62px; height:62px;" alt="My image"/>
 		</td>
-
 	</tr>
-
-
-
 </table>
 
