--- a/travelsBackend/texpenses/templates/texpenses/movement_compensation_application/content.html
+++ b/travelsBackend/texpenses/templates/texpenses/movement_compensation_application/content.html
@@ -6,27 +6,23 @@
 	<caption style='text-align: center;'><b>Αίτηση Αποζημίωσης Μετακίνησης</b></caption>
 	<tr>
 		<td>Μετακινούμενος</td>
-		<td>{{first_name}} {{last_name}}</td>
+		<td colspan="4">{{first_name}} {{last_name}}</td>
 	</tr>
-
 	<tr>
 		<td>Ιδιότητα</td>
-		<td>{{kind}}</td>
+		<td colspan="4">{{kind}}</td>
 	</tr>
-
 	<tr>
 		<td>Ειδικότητα</td>
-		<td>{{specialty}}</td>
+		<td colspan="4">{{specialty}}</td>
 	</tr>
 	<tr>
 		<td>ΑΦΜ</td>
-		<td>{{tax_reg_num}}</td>
+		<td colspan="4">{{tax_reg_num}}</td>
 	</tr>
-
-
 	<tr>
 		<td>Τραπεζικός Λογιαριασμός IBAN</td>
-		<td>{{iban}}</td>
+		<td colspan="4">{{iban}}</td>
 	</tr>
 	<tr>
 		<td>Ημερομηνία μετακίνησης</td>
@@ -35,7 +31,6 @@
 		<td>Επιστροφή</td>
 		<td>{{return_date|date:"d/m/Y"}}</td>
 	</tr>
-
 	<tr>
 		<td>Ημερομηνία εργασιών</td>
 		<td>Έναρξη</td>
@@ -43,7 +38,6 @@
 		<td>Λήξη</td>
 		<td>{{task_end_date|date:"d/m/Y"}}</td>
 	</tr>
-
 	<tr>
 		<td>Εναπομείνασες ημέρες μετακίνησης εργασιών</td>
 		<td>Πριν</td>
@@ -51,22 +45,14 @@
 		<td>Μετά</td>
 		<td>{{trip_days_after}}</td>
 	</tr>
-
 	<tr>
 		<td>Ημέρες μετακίνησης εργασιών</td>
 		<td>{{transport_days}}</td>
 	</tr>
-
 	<tr>
 		<td>Διανυκτερεύσεις</td>
 		<td>{{overnights_num}}</td>
 	</tr>
-
-	<tr>
-		<td>Αιτιολογία μετακίνησης</td>
-		<td>{{reason}}</td>
-	</tr>
-
 	<tr>
 		<td>Τόπος μετακίνησης</td>
 		<td>Από:</td>
@@ -74,12 +60,28 @@
 		<td>Προς:</td>
 		<td>{{arrival_point}}</td>
 	</tr>
-
+	{% if travel_info.count > 1 %}
+	<tr>
+		<td>Ενδιάμεσοι προορισμοί</td>
+		{% for travel_obj in travel_info %}
+		<tr>
+			<td>Από(ημ/νια {{travel_obj.depart_date|date:"d/m/Y"}}):</td>
+			<td>{{travel_obj.departure_point}}</td>
+			<td>Προς:</td>
+			<td>{{travel_obj.arrival_point}}</td>
+		</tr>
+		{% endfor %}
+	</tr>
+	{% else %}
 	<tr>
 		<td>Μέσο μετακίνησης</td>
 		<td>{{means_of_transport}}</td>
 	</tr>
-
+	{% endif %}
+	<tr>
+		<td>Αιτιολογία μετακίνησης</td>
+		<td colspan="4">{{reason}}</td>
+	</tr>
 </table>
 <br>
 <table style="width:100%">
@@ -89,55 +91,51 @@
 		<td><b>ΠΟΣΟ</b></td>
 	</tr>
 	<tr>
-		<td>Αεροπορικό εισιτήριο</td>
-		<td>{{transportation_cost}} {{transportation_default_currency}} </td>
+		<td>Εισιτήριο</td>
+		<td>{{transportation_cost}} ευρώ</td>
 	</tr>
-
 	<tr>
 		<td>Ημερήσια Αποζημίωση</td>
-		<td>{{compensation_days_manual}} ημέρες x {{compensation_level}} = {{compensation_cost}} ευρώ </td>
+		<td>{{compensation_string}} = {{compensation_cost}} ευρώ </td>
+
 	</tr>
-
-
 	<tr>
 		<td>Διανυκτέρευση</td>
-		<td>{{overnights_num_manual}} ημέρες x {{accommodation_cost}} = {{overnights_sum_cost}} {{accommodation_default_currency}}  </td>
+		<td>{{overnights_sum_cost_string}} = {{overnights_sum_cost}} ευρώ</td>
+
 	</tr>
-
-
 	<tr>
 		<td>Κόστος συμμετοχής</td>
-		<td>{{participation_cost}} {{participation_default_currency}}  </td>
+		<td>{{participation_cost}} ευρώ</td>
 	</tr>
-
 	<tr>
 		<td>Λοιπά έξοδα μετακίνησης</td>
-		<td>{{additional_expenses}} {{additional_expenses_default_currency}}  </td>
+		<td>{{additional_expenses}} ευρώ  </td>
 	</tr>
-
 	<tr>
 		<td><b>Σύνολο</td>
 		<td><b>{{total_cost}} ευρώ </b></td>
 	</tr>
-
 </table>
-<br>
-<table style="width:100%">
-	<caption style='text-align: center;'><b>Ο μετακινούμενος αιτείται την ακόλουθη αποζημίωση:</b></caption>
-	<tr>
-		<td>Ημερήσια Αποζημίωση</td>
-		<td>{{compensation_days_manual}} ημέρες x {{compensation_level}} = {{compensation_cost}} ευρώ </td>
-	</tr>
 
-	<tr>
-		<td>Λοιπά έξοδα μετακίνησης</td>
-		<td>{{additional_expenses}} ευρώ</td>
-	</tr>
+<footer style="position: absolute;right: 0;bottom: 0;left: 0;text-align: right;" >
+	{% include 'texpenses/footer.html' %}
+</footer>
 
-	<tr>
-		<td><b>Σύνολο Αποζημίωσης</td>
-		<td><b>{{compensation_final}} ευρώ</b></td>
-	</tr>
-
-</table>
-{% endblock %}
+	<br><br><br><br><br><br><br><br><br><br><br><br><br>
+	<table style="width:100%">
+		<caption style='text-align: center;'><b>Ο μετακινούμενος αιτείται την ακόλουθη αποζημίωση:</b></caption>
+		<tr>
+			<td>Ημερήσια Αποζημίωση</td>
+			<td>{{compensation_string}} = {{compensation_cost}} ευρώ </td>
+		</tr>
+		<tr>
+			<td>Λοιπά έξοδα μετακίνησης</td>
+			<td>{{additional_expenses}} ευρώ</td>
+		</tr>
+		<tr>
+			<td><b>Σύνολο Αποζημίωσης</td>
+			<td><b>{{compensation_final}} ευρώ</b></td>
+		</tr>
+	</table>
+	{% endblock %}
