--- a/travelsBackend/texpenses/templates/texpenses/movement_petition_application/content.html
+++ b/travelsBackend/texpenses/templates/texpenses/movement_petition_application/content.html
@@ -6,22 +6,19 @@
 	<caption style='text-align: center;'><b>Αίτηση Δαπάνης Μετακίνησης</b></caption>
 	<tr>
 		<td>Μετακινούμενος</td>
-		<td>{{first_name}} {{last_name}}</td>
+		<td colspan="4">{{first_name}} {{last_name}}</td>
 	</tr>
-
 	<tr>
 		<td>Ιδιότητα</td>
-		<td>{{kind}}</td>
+		<td colspan="4">{{kind}}</td>
 	</tr>
-
 	<tr>
 		<td>Ειδικότητα</td>
-		<td>{{specialty}}</td>
+		<td colspan="4">{{specialty}}</td>
 	</tr>
-
 	<tr>
 		<td>Τραπεζικός Λογιαριασμός IBAN</td>
-		<td>{{iban}}</td>
+		<td colspan="4">{{iban}}</td>
 	</tr>
 	<tr>
 		<td>Ημερομηνία μετακίνησης</td>
@@ -30,7 +27,6 @@
 		<td>Επιστροφή</td>
 		<td>{{return_date|date:"d/m/Y"}}</td>
 	</tr>
-
 	<tr>
 		<td>Ημερομηνία εργασιών</td>
 		<td>Έναρξη</td>
@@ -38,7 +34,6 @@
 		<td>Λήξη</td>
 		<td>{{task_end_date|date:"d/m/Y"}}</td>
 	</tr>
-
 	<tr>
 		<td>Εναπομείνασες ημέρες μετακίνησης εργασιών</td>
 		<td>Πριν</td>
@@ -46,22 +41,14 @@
 		<td>Μετά</td>
 		<td>{{trip_days_after}}</td>
 	</tr>
-
 	<tr>
 		<td>Ημέρες μετακίνησης εργασιών</td>
 		<td>{{transport_days}}</td>
 	</tr>
-
 	<tr>
 		<td>Διανυκτερεύσεις</td>
 		<td>{{overnights_num}}</td>
 	</tr>
-
-	<tr>
-		<td>Αιτιολογία μετακίνησης</td>
-		<td>{{reason}}</td>
-	</tr>
-
 	<tr>
 		<td>Τόπος μετακίνησης</td>
 		<td>Από:</td>
@@ -69,14 +56,30 @@
 		<td>Προς:</td>
 		<td>{{arrival_point}}</td>
 	</tr>
-
+	{% if travel_info.count > 1 %}
+	<tr>
+		<td>Ενδιάμεσοι προορισμοί</td>
+		{% for travel_obj in travel_info %}
+		<tr>
+			<td>Από(ημ/νια {{travel_obj.depart_date|date:"d/m/Y"}}):</td>
+			<td>{{travel_obj.departure_point}}</td>
+			<td>Προς:</td>
+			<td>{{travel_obj.arrival_point}}</td>
+		</tr>
+		{% endfor %}
+	</tr>
+	{% else %}
 	<tr>
 		<td>Μέσο μετακίνησης</td>
 		<td>{{means_of_transport}}</td>
 	</tr>
-
+	{% endif %}
+	<tr>
+		<td>Αιτιολογία μετακίνησης</td>
+		<td colspan="4">{{reason}}</td>
+	</tr>
 </table>
-<br>
+
 <table style="width:100%">
 	<caption style='text-align: center;'><b>Βεβαιώνουμε την ακόλουθη δέσμευση πίστωσης:</b></caption>
 	<tr>
@@ -84,33 +87,28 @@
 		<td>ΠΡΟΥΠΟΛΟΓΙΣΜΟΣ</td>
 	</tr>
 	<tr>
-		<td>Αεροπορικό εισιτήριο</td>
-		<td>{{transportation_cost}} {{transportation_default_currency}} </td>
+		<td>Εισιτήριο</td>
+		<td>{{transportation_cost}} ευρώ </td>
 	</tr>
-
 	<tr>
 		<td>Διανυκτέρευση</td>
-		<td>{{overnights_num_manual}} ημέρες x {{accommodation_cost}} = {{overnights_sum_cost}} {{accommodation_default_currency}}  </td>
+		<td>{{overnights_sum_cost_string}} = {{overnights_sum_cost}} ευρώ</td>
 	</tr>
 	<tr>
 		<td>Ημερήσια Αποζημίωση</td>
-		<td>{{compensation_days_manual}} ημέρες x {{compensation_level}} = {{compensation_cost}} ευρώ </td>
+		<td>{{compensation_string}} = {{compensation_cost}} ευρώ </td>
 	</tr>
-
 	<tr>
 		<td>Κόστος συμμετοχής</td>
-		<td>{{participation_cost}} {{participation_default_currency}}  </td>
+		<td>{{participation_cost}} ευρώ</td>
 	</tr>
-
 	<tr>
 		<td>Λοιπά έξοδα μετακίνησης</td>
-		<td>{{additional_expenses_initial}} {{additional_expenses_default_currency}}  </td>
+		<td>{{additional_expenses_initial}} ευρώ</td>
 	</tr>
-
 	<tr>
 		<td><b>Σύνολο</td>
 		<td>{{total_cost}} ευρώ</td>
 	</tr>
-
 </table>
 {% endblock %}
