--- a/travelsFront/app/templates/traveler-manual.hbs
+++ b/travelsFront/app/templates/traveler-manual.hbs
@@ -31,7 +31,7 @@
 			<p>
 				Στην καρτέλα «Οι Αιτήσεις μου» παρουσιάζονται, ανάλογα με την κατάσταση (status) στην οποία βρίσκονται, οι αιτήσεις του μετακινούμενου. 
 				Στην συγκεκριμένη καρτέλα, ο μετακινούμενος έχει τη δυνατότητα να πραγματοποιήσει τις παρακάτω ενέργειες:
-			<ul>	 
+			<ul>
 			 	<li><b>Επεξεργασία</b>: ο μετακινούμενος έχει την δυνατότητα να επεξεργαστεί τα στοιχεία μιας αίτησης και στη συνέχεια να την αποθηκεύσει ή/και να την υποβάλει.</li>
 				<li><b>Διαγραφή</b>: ο μετακινούμενος έχει την δυνατότητα να διαγράψει μια αίτησή του.</li>
 				<li><b>Αναίρεση της υποβολής</b>: δυνατότητα της αναίρεσης της υποβολής μιας αίτησης και επιστροφή της στην προηγούμενη κατάσταση.</li>
@@ -47,9 +47,8 @@
 			<h4>Δημιουργία Αίτησης Αποζημίωσης</h4>
 			<p>Ο μετακινούμενος, μετά την άφιξη του, θα πρέπει να συνδεθεί εκ νέου στο σύστημα και να συμπληρώσει τα ακόλουθα στοιχεία:
 			<ul>
-				<li><b>Ανέβασμα αρχείων</b>: ο μετακινούμενος θα πρέπει να ανεβάσει το πρόγραμμα της μετακίνησης. Σε περίπτωση περισσότερων αρχείων (π.χ. ατζέντα, αποδεικτικό παρακολούθησης) μπορεί να ανεβάσει ένα αρχείο τύπου zip</li>
-				<li><b>Απολογισμός Μετακίνησης</b>: Ο μετακινούμενος θα πρέπει να καταγράψει τον απολογισμό της μετακίνησης.</li>
-				<li><b>Λοιπά Έξοδα Μετακίνησης</b>: πχ εισιτήρια μέσων μαζικής μεταφοράς (πραγματική τιμή).</li>
+				<li><b>Ανέβασμα αρχείων</b>: Ο μετακινούμενος θα πρέπει να ανεβάσει το πρόγραμμα και τον απολογισμό της μετακίνησης ( <a href="***REMOVED***">template</a> ) σε ένα αρχείο τύπου zip με μέγιστο μέγεθος 8 MB.</li>
+				<li><b>Λοιπά Έξοδα Μετακίνησης</b>: Ο μετακινούμενος θα πρέπει να εισάγει το άθροισμα των εξόδων μετακίνησης. Πχ εισιτήρια μέσων μαζικής μεταφοράς (πραγματική τιμή).</li>
 				<li><b>Λοιπά Έξοδα Μετακίνησης - Περιγραφή</b>: περιγραφή των εξόδων π.χ. εισιτήρια λεωφορείου.</li>
 			</ul>
 			Στη συνέχεια θα πρέπει να αποθηκεύσει τις αλλαγές του (επιλέγοντας το κουμπί «ΑΠΟΘΗΚΕΥΣΗ») και να υποβάλει την αίτηση (επιλέγοντας το κουμπί «ΥΠΟΒΟΛΗ») ώστε να εγκριθεί η αποζημίωσή του. Σημειώνεται ότι δεν υπάρχει περιορισμός στο πόσες φορές μπορεί να αποθηκευθεί η αίτηση μέχρι την υποβολή της. Με την υποβολή της Αίτησης Αποζημίωσης, θα ενημερωθούν μέσω email ο Υπεύθυνος του Έργου και η Γραμματεία.
